Bug 94026 - fast/js/dfg-compare-final-object-to-final-object-or-other-when-both-proven-final-object.html crashes on 32-bit
Summary: fast/js/dfg-compare-final-object-to-final-object-or-other-when-both-proven-fi...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-14 15:41 PDT by Mark Hahnenberg
Modified: 2012-08-20 15:33 PDT (History)
6 users (show)

See Also:


Attachments
the patch (1.50 KB, patch)
2012-08-20 15:27 PDT, Filip Pizlo
mhahnenberg: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hahnenberg 2012-08-14 15:41:37 PDT
Assertion failure in debug mode on 32-bit Mac as of r125571.
Comment 1 Filip Pizlo 2012-08-20 15:27:59 PDT
Created attachment 159537 [details]
the patch
Comment 2 Mark Hahnenberg 2012-08-20 15:31:46 PDT
Comment on attachment 159537 [details]
the patch

r=me
Comment 3 Filip Pizlo 2012-08-20 15:33:39 PDT
Fixed in http://trac.webkit.org/changeset/126081